add gui flag to skip relationships
